@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Download archives of patients, studies and serie as ZIP files
+
 
 Version 0.3.0 (2012/11/30)
 ==========================
